Added comments and extra properties to app.properties

--- a/app.properties
+++ b/app.properties
@@ -1,1 +1,9 @@
-url-host:http://localhost:8080
+#e.g. url.host=http://localhost:8080
+url.host=http://localhost:8080
+
+#e.g. url.route=/path/file
+#e.g. url.params=param1=value1&param2=value2
+#e.g. user.username=admin
+
+#e.g. user.password=Password1
+user.password=Password1
