Added new parameters to app.properties

--- a/app.properties
+++ b/app.properties
@@ -1,3 +1,9 @@
+#e.g. request.type=GET
+request.type=GET
+
+#e.g. request.content-list=content-list.txt
+request.content-list=content-list.txt
+
 #e.g. url.host=http://localhost:8080
 url.host=http://localhost:8080
 
